istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pet-clinic-gateway-routes
  namespace: petclinic
spec:
  hosts:
  - "*"
  gateways:
  - pet-clinic-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-gateway
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: config-server
        port:
          number: 8888
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: visits-service
        port:
          number: 8082
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: customers-service
        port:
          number: 8081

# The VirtualService routes that external traffic to your application
